# jpegdec-nrf52

./: Cargo.toml  Embed.toml
.cargo/: config
src/: main.rs
